# cdkam

./: .gitignore  Cargo.toml  LICENSE  README.md  cdkam.code-workspace  mise.toml  release-plz.toml  tasks.toml
.github/workflows/: release-plz-release-pr.yaml  release-plz-release.yaml  release-plz.yaml
crates/cdkam/: CHANGELOG.md  Cargo.toml
crates/cdkam/src/: lib.rs
crates/cdkam/src/m/: mod.rs
crates/cdkam/src/m/ansible/: mod.rs
crates/cdkam/src/m/ansible/builtin/: add_host.rs  apt.rs  apt_key.rs  apt_repository.rs  assemble.rs  assert.rs  async_status.rs  blockinfile.rs  command.rs  copy.rs  cron.rs  deb822_repository.rs  debconf.rs  debug.rs  dnf.rs  dnf5.rs  dpkg_selections.rs  expect.rs  fail.rs  fetch.rs  file.rs  find.rs  gather_facts.rs  get_url.rs  getent.rs  git.rs  group.rs  group_by.rs  hostname.rs  import_playbook.rs  import_role.rs  import_tasks.rs  include_role.rs  include_tasks.rs  include_vars.rs  iptables.rs  known_hosts.rs  lineinfile.rs  meta.rs  mod.rs  (+32 more)
crates/cdkam/src/m/ansible/posix/: acl.rs  at.rs  authorized_key.rs  firewalld.rs  firewalld_info.rs  mod.rs  mount.rs  patch.rs  rhel_facts.rs  rhel_rpm_ostree.rs  rpm_ostree_upgrade.rs  seboolean.rs  selinux.rs  synchronize.rs  sysctl.rs
crates/cdkam/src/m/community/: mod.rs
crates/cdkam/src/m/community/general/: aerospike_migrations.rs  airbrake_deployment.rs  aix_devices.rs  aix_filesystem.rs  aix_inittab.rs  aix_lvg.rs  aix_lvol.rs  alerta_customer.rs  ali_instance.rs  ali_instance_info.rs  alternatives.rs  android_sdk.rs  ansible_galaxy_install.rs  apache2_mod_proxy.rs  apache2_module.rs  apk.rs  apt_repo.rs  apt_rpm.rs  archive.rs  atomic_container.rs  atomic_host.rs  atomic_image.rs  awall.rs  beadm.rs  bearychat.rs  bigpanda.rs  bitbucket_access_key.rs  bitbucket_pipeline_key_pair.rs  bitbucket_pipeline_known_host.rs  bitbucket_pipeline_variable.rs  bootc_manage.rs  bower.rs  btrfs_info.rs  btrfs_subvolume.rs  bundler.rs  bzr.rs  campfire.rs  capabilities.rs  cargo.rs  catapult.rs  (+562 more)
crates/simple-sample/: Cargo.toml
crates/simple-sample/src/: lib.rs  main.rs  sample_stack.rs
tools/simple-sample/ansible/: .gitignore  README.md  ansible.cfg  pyproject.toml
tools/simple-sample/ansible/.config/: ansible-lint.yaml
tools/simple-sample/ansible/inventory/: inventory.yaml
tools/simple-sample/ansible/playbooks/: SampleStack_seq0_par0_debug.yaml
xtasks/fmt/: rust  shfmt
xtasks/test/: rust  simple-sample
