[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
description = "Common modules for cdk-ansible"
authors = ["pollenjp <polleninjp@gmail.com>"]
license = "MIT"
keywords = ["ansible", "cdk", "cdk-ansible"]

[workspace.dependencies]
# FIXME: fix before release
cdk-ansible = { git = "https://github.com/pollenjp/cdk-ansible.git", branch = "main" }
cdkam = { path = "crates/cdkam" }

anyhow = { version = "1.0.95" }
indexmap = { version = "2.7.1", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
