[package]
name = "cdkam"
version = "0.2.5"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage = "https://github.com/pollenjp/cdkam"
documentation = "https://docs.rs/cdkam"
repository = "https://github.com/pollenjp/cdkam"
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
cdk-ansible.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["ansible", "community"]
ansible = ["ansible-builtin", "ansible-posix"]
ansible-builtin = []
ansible-posix = []
community = ["community-general"]
community-general = []
