[project]
name = "playbook-output"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = ["ansible>=10.3.0"]

[dependency-groups]
dev = ["ansible-lint>=24.10.0"]

[tool.uv]
# https://github.com/astral-sh/uv/issues/6127#issuecomment-2298975659
environments = ["platform_system != 'Windows'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
